# forge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  release.yml
crates/api-diff/: Cargo.toml
crates/api-diff/src/: lib.rs
crates/checklist-state/: Cargo.toml
crates/checklist-state/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: aliases.rs  aliases_builtin.toml  fmem_skill_ingest.rs  glob.rs  main.rs
crates/cli/tests/: glob_mcp.rs  mcp_ingest.rs  tool_aliases.rs
crates/concurrency-scan/: Cargo.toml
crates/concurrency-scan/src/: lib.rs  scanner.rs
crates/coverage-gate/: Cargo.toml
crates/coverage-gate/src/: gate.rs  lib.rs
crates/dep-tree/: Cargo.toml
crates/dep-tree/src/: lib.rs
crates/deps-audit/: Cargo.toml
crates/deps-audit/src/: lib.rs
crates/devtools/: Cargo.toml
crates/devtools/src/: cargo.rs  ci.rs  docker.rs  dotnet.rs  elixir.rs  git.rs  go.rs  lib.rs  npm.rs  python.rs  runner.rs
crates/diff-filter/: Cargo.toml
crates/diff-filter/src/: filter.rs  lib.rs
crates/digest/: Cargo.toml
crates/digest/src/: excerpt.rs  lib.rs  lookup.rs  summarizer.rs
crates/doc-coverage/: Cargo.toml
crates/doc-coverage/src/: lib.rs  scanner.rs
crates/dsm-analyze/: Cargo.toml  README.md
crates/dsm-analyze/src/: cluster.rs  cycles.rs  dead_code.rs  directed.rs  enforce.rs  lib.rs  matrix.rs  metrics.rs  partition.rs  report.rs  suggest.rs
crates/dsm-analyze/src/extract/: bridge.rs  csharp.rs  dot_parser.rs  elixir.rs  go.rs  java.rs  mod.rs  multi.rs  python.rs  rust_lang.rs  typescript.rs
crates/dsm-analyze/tests/: dead_code_hardening.rs
crates/fail-loud-scan/: Cargo.toml
crates/fail-loud-scan/src/: lib.rs
crates/fmem-client/: Cargo.toml
crates/fmem-client/src/: error.rs  lib.rs
crates/fmem-client/src/tools/: batch_delete_entities.rs  batch_update_entities.rs  count_entities_by_type.rs  ensure_parent_tag.rs  handshake.rs  ingest_entities.rs  ingest_skill.rs  mod.rs  smart_ingest.rs  verify_skill.rs
crates/fmem-client/src/transport/: http.rs  mock.rs  mod.rs  stdio.rs
crates/fmem-client/tests/: smart_ingest.rs
crates/format-fix/: Cargo.toml
crates/format-fix/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: cache.rs  corpus.rs  extractor.rs  graph_loader.rs  ignore_policy.rs  lib.rs  lsp.rs  paper.rs  position.rs  refresh.rs  sanitize.rs  smart_paper_loader.rs  source_buffer.rs  url.rs
crates/ingest/src/descriptions/: config.rs  mod.rs  orchestrator.rs  probe.rs  project_root.rs  prompt.rs  provider.rs  redactor.rs  report.rs  schema.rs
crates/ingest/src/descriptions/providers/: mock.rs  mod.rs  ollama.rs  skip.rs
crates/ingest/src/pdf/: element.rs  filter.rs  mod.rs  reading_order.rs
crates/ingest/src/pdf/processors/: heading.rs  mod.rs  section.rs
crates/ingest/src/pdf/tests/: filter_test.rs  mod.rs  processor_test.rs  reading_order_test.rs
crates/ingest/src/skill_ingest/: build_args.rs  collision.rs  hash.rs  mod.rs  parse.rs  run.rs  secret_check.rs  supplementary.rs  walk.rs
crates/ingest/src/skill_ingest/taxonomy/: hierarchy.rs  mod.rs  plan.rs
crates/ingest/tests/: paper_smart_ingest.rs  run_harness.rs  skill_catalog_smoke.rs
crates/lint-dedup/: Cargo.toml
crates/lint-dedup/src/: dedup.rs  lib.rs
crates/log-distill/: Cargo.toml
crates/log-distill/src/: distiller.rs  lib.rs
crates/log-monitor/: Cargo.toml
crates/log-monitor/src/: lib.rs  monitor.rs
crates/materialization-scan/: Cargo.toml
crates/materialization-scan/src/: lib.rs  scanner.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs
crates/merge-check/: Cargo.toml
crates/merge-check/src/: lib.rs
crates/mermaid-validate/: Cargo.toml
crates/mermaid-validate/src/: lib.rs
crates/outline/: Cargo.toml
crates/outline/src/: lib.rs
crates/project-detect/: Cargo.toml
crates/project-detect/src/: detector.rs  lib.rs  summary.rs
crates/schema-diff/: Cargo.toml
crates/schema-diff/src/: lib.rs
crates/secret-scan/: Cargo.toml
crates/secret-scan/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: filters.rs  lib.rs  secrets.rs  tee.rs  tracking.rs
crates/smell-detect/: Cargo.toml
crates/smell-detect/src/: detector.rs  lib.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: config.rs  debug_stop.rs  lib.rs  schema.rs  store.rs  types.rs
crates/tasks/tests/: board_health_live.rs
crates/test-summary/: Cargo.toml
crates/test-summary/src/: lib.rs  parser.rs
crates/threat-scan/: Cargo.toml
crates/todo-extract/: Cargo.toml
crates/todo-extract/src/: lib.rs
docs/analyses/: cassandra-architecture-analysis.md  riak-architecture-analysis.md
hooks/: forge-failure-hint.sh  forge-mcp-hint.sh  forge-session-hint.sh
specs/: README.md  checklist-dag-project-plan.md  components.md  data-flow.md  hooks-integration.md  overview.md  paper-ingestion.md  token-conservation.md
specs/feat-code-graph-ingest/: compiled-plan.md  existing-work-items.md  fmea.md  overview.md  project-plan.md  rust-hazards.md
specs/feat-glob-stats/: compiled-plan.md  fmea.md  overview.md  rust-hazards.md  test-plan.md  threat-model.md
specs/feat-ingest-function-descriptions/: compiled-plan.md  fmea.md  overview.md  rust-hazards.md  test-plan.md  threat-model.md
specs/fmem-skill-ingest/: architecture.md  compiled-plan.md  dsm.md  fmea.md  overview.md  project-plan.md  rust-hazards.md  threat-model.md
specs/implemented/: feat-ingest-function-descriptions.md  feat-tool-aliases.md
specs/in-process/: feat-glob-stats.md  fmem-skill-ingest.md
specs/plans/: 2025-05-03-pdf-structure-extraction.md
specs/todo/: arxiv-entity-mapping.md  bug-author-name-format-inconsistency.md  bug-ingest-dangling-edge-references.md  bug-ingest-paper-two-column-pdf-layout.md  bug-uuid-collision-common-function-names.md  feat-api-contract-diff.md  feat-checklist-state.md  feat-deps-audit.md  feat-mermaid-validate.md  feat-schema-diff.md  feat-secret-scan.md  feat-threat-scan.md  feat-todo-extract.md
(+1 files in other folders)
