[package]
name = "forge-digest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
dirs = { workspace = true }
forge-shared = { path = "../shared" }
