[package]
name = "forge-dsm-analyze"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
rand = "0.9"

[dev-dependencies]
tempfile = { workspace = true }
