[package]
name = "forge-fail-loud-scan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = "0.25"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-elixir = "0.3.5"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
tempfile = { workspace = true }
