[package]
name = "forge-fmem-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
ureq = { version = "3", features = ["json", "platform-verifier"] }
base64 = "0.22"
