[package]
name = "forge-format-fix"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
forge-project-detect = { path = "../project-detect" }

[dev-dependencies]
tempfile = "3"
