[package]
name = "forge-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
toml = { workspace = true }
uuid = { version = "1", features = ["v4", "v5"] }
tempfile = { workspace = true }
forge-shared = { path = "../shared" }
forge-secret-scan = { path = "../secret-scan" }
forge-fmem-client = { path = "../fmem-client" }
which = "7"
ureq = { version = "3", features = ["json"] }
walkdir = "2"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
chrono = { workspace = true }
url = "2"
fs2 = "0.4"
