[package]
name = "forge-project-detect"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
forge-shared = { path = "../shared" }

[dev-dependencies]
tempfile = "3"
