[package]
name = "forge-schema-diff"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
