[package]
name = "forge-tasks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1", features = ["v4"] }
scylla = "0.15"
tokio = { version = "1", features = ["rt"] }
chrono = { workspace = true }
toml = { workspace = true }
