[package]
name = "forge-todo-extract"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
